--- a/server-auth/.env
+++ b/server-auth/.env
@@ -1,4 +1,4 @@
-PORT=5000
+PORT="5000"
 # HOST=""
 APP_ENV=local
 
@@ -8,10 +8,10 @@ DB_DATABASE=blueprint
 DB_USERNAME=melkey
 DB_PASSWORD=password1234
 
-CLIENT_URL=http://localhost:3000
-AUTH_URL=http://localhost:5000
-BUCKET_URL=http://localhost:4000
-GAMESERVER_URL=http://localhost:8080
+CLIENT_URL="http://localhost:3000"
+AUTH_URL="http://localhost:5000"
+BUCKET_URL="http://localhost:4000"
+GAMESERVER_URL="http://localhost:6000"
 
 GOOGLE_CLIENT_ID="927400600178-ukdk8ovmrtq5lcddisin3hju5s9rqjoo.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET=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
