--- a/server-game/.env
+++ b/server-game/.env
@@ -1,6 +1,9 @@
-PORT="6000"
+APP_ENV=local
+
+# HOST=
+PORT="8000"
 
 CLIENT_URL="http://localhost:3000"
 AUTH_URL="http://localhost:5000"
 BUCKET_URL="http://localhost:4000"
-GAMESERVER_URL="http://localhost:6000"
+GAMESERVER_URL="http://localhost:8000"
