--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+/server-bucket/.env
+/server-auth/.env
+/server-game/.env
+/client/.env
+
+/server-bucket/key.json
+
 # dependencies
 /client/node_modules
 /client/.pnp
@@ -26,8 +33,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# env files
 .env*.local
+*.env
 
 # vercel
 .vercel
