--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,3 +43,16 @@ services:
       - GAMESERVER_URL=${GAMESERVER_URL}
       - APP_ENV=${APP_ENV}
     restart: unless-stopped
+
+  mugen-client:
+    container_name: mugen-client
+    build: ./client
+    ports:
+      - "3000:3000"
+    environment:
+      - PORT=3000
+      - NEXT_PUBLIC_AUTH_SERVER_URL=${NEXT_PUBLIC_AUTH_SERVER_URL}
+      - BUCKET_URL=${BUCKET_URL}
+      - NEXT_PUBLIC_GAME_SERVER_URL=${NEXT_PUBLIC_GAME_SERVER_URL}
+      - NEXT_PUBLIC_GAME_SERVER_SOCKET_URL=${NEXT_PUBLIC_GAME_SERVER_SOCKET_URL}
+    restart: unless-stopped
