add envs to github action yaml

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -42,6 +42,13 @@ jobs:
           file: ./server-auth/Dockerfile
           tags: asia-southeast1-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/server-auth:latest
           push: true
+        env:
+          CLIENT_URL: ${{ secrets.CLIENT_URL }}
+          AUTH_URL: ${{ secrets.AUTH_URL }}
+          BUCKET_URL: ${{ secrets.BUCKET_URL }}
+          GAMESERVER_URL: ${{ secrets.GAMESERVER_URL }}
+          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
 
       - name: Build and push Docker image for server-bucket
         uses: docker/build-push-action@v2
@@ -50,6 +57,11 @@ jobs:
           file: ./server-bucket/Dockerfile
           tags: asia-southeast1-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/server-bucket:latest
           push: true
+        env:
+          CLIENT_URL: ${{ secrets.CLIENT_URL }}
+          AUTH_URL: ${{ secrets.AUTH_URL }}
+          BUCKET_URL: ${{ secrets.BUCKET_URL }}
+          GAMESERVER_URL: ${{ secrets.GAMESERVER_URL }}
 
       - name: Build and push Docker image for server-game
         uses: docker/build-push-action@v2
@@ -58,6 +70,11 @@ jobs:
           file: ./server-game/Dockerfile
           tags: asia-southeast1-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/server-game:latest
           push: true
+        env:
+          CLIENT_URL: ${{ secrets.CLIENT_URL }}
+          AUTH_URL: ${{ secrets.AUTH_URL }}
+          BUCKET_URL: ${{ secrets.BUCKET_URL }}
+          GAMESERVER_URL: ${{ secrets.GAMESERVER_URL }}
 
       - name: Build and push Docker image for client
         uses: docker/build-push-action@v2
@@ -66,3 +83,9 @@ jobs:
           file: ./client/Dockerfile
           tags: asia-southeast1-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/client:latest
           push: true
+        env:
+          CLIENT_URL: ${{ secrets.CLIENT_URL }}
+          AUTH_URL: ${{ secrets.AUTH_URL }}
+          BUCKET_URL: ${{ secrets.BUCKET_URL }}
+          GAMESERVER_URL: ${{ secrets.GAMESERVER_URL }}
+          GAMESERVER_SOCKET_URL: ${{ secrets.GAMESERVER_SOCKET_URL }}
