--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -95,20 +95,20 @@ jobs:
 
       - name: Perform rolling update for server-auth pods
         run: |
-          gcloud container clusters get-credentials server-auth-cluster --zone=asia-southeast2-a
-          kubectl set image deployment/server-auth server-auth-1=asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/server-auth:latest --record
+          gcloud container clusters get-credentials server-auth-cluster --zone=asia-east2-a
+          kubectl set image deployment server-auth server-auth-1=asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/server-auth:latest
 
       - name: Perform rolling update for server-bucket pods
         run: |
           gcloud container clusters get-credentials server-bucket-cluster --zone=asia-east1-a
-          kubectl set image deployment/server-bucket server-bucket-1=asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/server-bucket:latest --record
+          kubectl set image deployment server-bucket server-bucket-1=asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/server-bucket:latest
 
       - name: Perform rolling update for server-game pods
         run: |
-          gcloud container clusters get-credentials server-game-cluster --zone=asia-east2-a
-          kubectl set image deployment/server-game server-game-1=asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/server-game:latest --record
+          gcloud container clusters get-credentials server-game-cluster --zone=asia-south1-a
+          kubectl set image deployment server-game server-game-1=asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/server-game:latest
 
       - name: Perform rolling update for client pods
         run: |
           gcloud container clusters get-credentials client-cluster --zone=asia-southeast1-a
-          kubectl set image deployment/client client-1=asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/client:latest --record
+          kubectl set image deployment client client-1=asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/client:latest
