--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -96,19 +96,19 @@ jobs:
       - name: Perform rolling update for server-auth pods
         run: |
           gcloud container clusters get-credentials server-auth-cluster --zone=asia-east2-a
-          kubectl set image deployment server-auth server-auth-1=asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/server-auth:latest
+          kubectl patch deployment server-auth -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"deployment\":\"$(date +'%Y-%m-%d %H:%M:%S')\"}}}}}"
 
       - name: Perform rolling update for server-bucket pods
         run: |
           gcloud container clusters get-credentials server-bucket-cluster --zone=asia-east1-a
-          kubectl set image deployment server-bucket server-bucket-1=asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/server-bucket:latest
+          kubectl patch deployment server-bucket -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"deployment\":\"$(date +'%Y-%m-%d %H:%M:%S')\"}}}}}"
 
       - name: Perform rolling update for server-game pods
         run: |
           gcloud container clusters get-credentials server-game-cluster --zone=asia-south1-a
-          kubectl set image deployment server-game server-game-1=asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/server-game:latest
+          kubectl patch deployment server-game -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"deployment\":\"$(date +'%Y-%m-%d %H:%M:%S')\"}}}}}"
 
       - name: Perform rolling update for client pods
         run: |
           gcloud container clusters get-credentials client-cluster --zone=asia-southeast1-a
-          kubectl set image deployment client client-1=asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/client:latest
+          kubectl patch deployment client -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"deployment\":\"$(date +'%Y-%m-%d %H:%M:%S')\"}}}}}"
