--- a/client/resources.yaml
+++ b/client/resources.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   annotations:
     deployment.kubernetes.io/revision: "1"
+    deployed: "$(date -u +'%Y-%m-%dT%H:%M:%SZ')"
   creationTimestamp: "2024-06-12T07:14:07Z"
   generation: 1
   labels:
@@ -110,6 +111,17 @@ spec:
         - image: asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/client:latest
           imagePullPolicy: Always
           name: client-1
+          env:
+            - name: CLIENT_URL
+              value: $CLIENT_URL
+            - name: AUTH_URL
+              value: $AUTH_URL
+            - name: BUCKET_URL
+              value: $BUCKET_URL
+            - name: GAMESERVER_URL
+              value: $GAMESERVER_URL
+            - name: GAMESERVER_SOCKET_URL
+              value: $GAMESERVER_SOCKET_URL
           resources: {}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
