--- a/server-auth/resources.yaml
+++ b/server-auth/resources.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   annotations:
     deployment.kubernetes.io/revision: "1"
+    deployed: "$(date -u +'%Y-%m-%dT%H:%M:%SZ')"
   creationTimestamp: "2024-06-12T08:31:39Z"
   generation: 1
   labels:
@@ -110,6 +111,19 @@ spec:
         - image: asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/server-auth:latest
           imagePullPolicy: Always
           name: server-auth-1
+          env:
+            - name: CLIENT_URL
+              value: $CLIENT_URL
+            - name: AUTH_URL
+              value: $AUTH_URL
+            - name: BUCKET_URL
+              value: $BUCKET_URL
+            - name: GAMESERVER_URL
+              value: $GAMESERVER_URL
+            - name: GOOGLE_CLIENT_ID
+              value: $GOOGLE_CLIENT_ID
+            - name: GOOGLE_CLIENT_SECRET
+              value: $GOOGLE_CLIENT_SECRET
           resources: {}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
