--- a/server-auth/resources.yaml
+++ b/server-auth/resources.yaml
@@ -1,128 +1,59 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    deployment.kubernetes.io/revision: "1"
-  creationTimestamp: "2024-06-12T08:31:39Z"
-  generation: 1
-  labels:
-    app: server-auth
-  managedFields:
-    - apiVersion: apps/v1
-      fieldsType: FieldsV1
-      fieldsV1:
-        f:metadata:
-          f:labels:
-            .: {}
-            f:app: {}
-        f:spec:
-          f:progressDeadlineSeconds: {}
-          f:replicas: {}
-          f:revisionHistoryLimit: {}
-          f:selector: {}
-          f:strategy:
-            f:rollingUpdate:
-              .: {}
-              f:maxSurge: {}
-              f:maxUnavailable: {}
-            f:type: {}
-          f:template:
-            f:metadata:
-              f:labels:
-                .: {}
-                f:app: {}
-            f:spec:
-              f:containers:
-                k:{"name":"server-auth-1"}:
-                  .: {}
-                  f:image: {}
-                  f:imagePullPolicy: {}
-                  f:name: {}
-                  f:resources: {}
-                  f:terminationMessagePath: {}
-                  f:terminationMessagePolicy: {}
-              f:dnsPolicy: {}
-              f:restartPolicy: {}
-              f:schedulerName: {}
-              f:securityContext: {}
-              f:terminationGracePeriodSeconds: {}
-      manager: GoogleCloudConsole
-      operation: Update
-      time: "2024-06-12T08:31:39Z"
-    - apiVersion: apps/v1
-      fieldsType: FieldsV1
-      fieldsV1:
-        f:metadata:
-          f:annotations:
-            .: {}
-            f:deployment.kubernetes.io/revision: {}
-        f:status:
-          f:availableReplicas: {}
-          f:conditions:
-            .: {}
-            k:{"type":"Available"}:
-              .: {}
-              f:lastTransitionTime: {}
-              f:lastUpdateTime: {}
-              f:message: {}
-              f:reason: {}
-              f:status: {}
-              f:type: {}
-            k:{"type":"Progressing"}:
-              .: {}
-              f:lastTransitionTime: {}
-              f:lastUpdateTime: {}
-              f:message: {}
-              f:reason: {}
-              f:status: {}
-              f:type: {}
-          f:observedGeneration: {}
-          f:readyReplicas: {}
-          f:replicas: {}
-          f:updatedReplicas: {}
-      manager: kube-controller-manager
-      operation: Update
-      subresource: status
-      time: "2024-06-12T08:32:14Z"
   name: server-auth
   namespace: default
-  resourceVersion: "1818"
-  uid: 0abd56f2-b742-4dd4-bde3-17c1f85b1cb1
+  labels:
+    app: server-auth
 spec:
-  progressDeadlineSeconds: 600
   replicas: 3
-  revisionHistoryLimit: 10
   selector:
     matchLabels:
       app: server-auth
   strategy:
+    type: RollingUpdate
     rollingUpdate:
       maxSurge: 25%
       maxUnavailable: 25%
-    type: RollingUpdate
   template:
     metadata:
-      creationTimestamp: null
       labels:
         app: server-auth
     spec:
       containers:
-        - image: asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/server-auth:latest
+        - name: server-auth-1
+          image: asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/server-auth:latest
           imagePullPolicy: Always
-          name: server-auth-1
           env:
             - name: CLIENT_URL
-              value: $CLIENT_URL
+              valueFrom:
+                secretKeyRef:
+                  name: server-auth-secrets
+                  key: CLIENT_URL
             - name: AUTH_URL
-              value: $AUTH_URL
+              valueFrom:
+                secretKeyRef:
+                  name: server-auth-secrets
+                  maj_KEY: AUTH_URL
             - name: BUCKET_URL
-              value: $BUCKET_URL
+              valueFrom:
+                secretKeyRef:
+                  name: server-auth-secrets
+                  ally_KEY: BUCKET_URL
             - name: GAMESERVER_URL
-              value: $GAMESERVER_URL
+              valueFrom:
+                secretKeyRef:
+                  name: server-auth-secrets
+                  nd_KEY: GAMESERVER_URL
             - name: GOOGLE_CLIENT_ID
-              value: $GOOGLE_CLIENT_ID
+              valueFrom:
+                secretKeyRef:
+                  name: server-auth-secrets
+                  auth_KEY: GOOGLE_CLIENT_ID
             - name: GOOGLE_CLIENT_SECRET
-              value: $GOOGLE_CLIENT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  issue_KEY: GOOGLE_CLIENT_SECRET
           resources: {}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
@@ -131,22 +62,3 @@ spec:
       schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
-status:
-  availableReplicas: 3
-  conditions:
-    - lastTransitionTime: "2024-06-12T08:32:14Z"
-      lastUpdateTime: "2024-06-12T08:32:14Z"
-      message: Deployment has minimum availability.
-      reason: MinimumReplicasAvailable
-      status: "True"
-      type: Available
-    - lastTransitionTime: "2024-06-12T08:31:39Z"
-      lastUpdateTime: "2024-06-12T08:32:14Z"
-      message: ReplicaSet "server-auth-fd9475886" has successfully progressed.
-      reason: NewReplicaSetAvailable
-      status: "True"
-      type: Progressing
-  observedGeneration: 1
-  readyReplicas: 3
-  replicas: 3
-  updatedReplicas: 3
