--- a/server-auth/ingress.yaml
+++ b/server-auth/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: client-ingress
+  name: server-auth-ingress
   annotations:
     kubernetes.io/ingress.class: "gce"
 spec:
@@ -13,6 +13,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: client-service
+                name: server-auth-service
                 port:
-                  number: 3000
+                  number: 5000
