--- a/client/resources.yaml
+++ b/client/resources.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
         - name: client-1
-          image: asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/client:latest
+          image: asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/client:${IMAGE_TAG}
           imagePullPolicy: Always
           env:
             - name: CLIENT_URL
