change externaltrafficpolicy to local on client facing balancers

--- a/server-auth/kubernetes/service.yaml
+++ b/server-auth/kubernetes/service.yaml
@@ -9,7 +9,7 @@ metadata:
   namespace: default
 spec:
   allocateLoadBalancerNodePorts: true
-  externalTrafficPolicy: Cluster
+  externalTrafficPolicy: Local
   ports:
     - nodePort: 30753
       port: 5000
