--- a/client/kubernetes/service.yaml
+++ b/client/kubernetes/service.yaml
@@ -9,7 +9,7 @@ metadata:
   namespace: default
 spec:
   allocateLoadBalancerNodePorts: true
-  externalTrafficPolicy: Cluster
+  externalTrafficPolicy: Local
   ports:
     - nodePort: 30771
       port: 3000
