--- a/client/kubernetes/service.yaml
+++ b/client/kubernetes/service.yaml
@@ -11,9 +11,9 @@ spec:
   allocateLoadBalancerNodePorts: true
   externalTrafficPolicy: Local
   ports:
-    port: 3000
-    protocol: TCP
-    targetPort: 3000
+    - port: 3000
+      protocol: TCP
+      targetPort: 3000
   selector:
     app: client
   sessionAffinity: ClientIP
