--- a/server-auth/kubernetes/ingress.yaml
+++ b/server-auth/kubernetes/ingress.yaml
@@ -6,13 +6,13 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "gce"
     ingress.kubernetes.io/affinity: "cookie"
-    ingress.kubernetes.io/session-cookie-name: "affinityCookie"
+    ingress.kubernetes.io/session-cookie-name: "affinityAuthCookie"
     ingress.kubernetes.io/session-cookie-hash: "sha256"
 spec:
   rules:
     - http:
         paths:
-          - path: /auth/*
+          - path: /*
             pathType: ImplementationSpecific
             backend:
               service:
