--- a/server-auth/kubernetes/resources-template.yaml
+++ b/server-auth/kubernetes/resources-template.yaml
@@ -24,6 +24,8 @@ spec:
         - name: server-auth-1
           image: asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/server-auth:${IMAGE_TAG}
           imagePullPolicy: Always
+          ports:
+            - containerPort: 5000
           env:
             - name: CLIENT_URL
               valueFrom:
@@ -34,12 +36,12 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: server-secrets
-                  key: AUTH_URL
+                  key: AUTH_UR
             - name: BUCKET_URL
               valueFrom:
                 secretKeyRef:
                   name: server-secrets
-                  key: BUCKET_URL
+                  key: BUCKET_UR
             - name: GAMESERVER_URL
               valueFrom:
                 secretKeyRef:
@@ -55,6 +57,18 @@ spec:
                 secretKeyRef:
                   name: server-secrets
                   key: GOOGLE_CLIENT_SECRET
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 5000
+            initialDelaySeconds: 10
+            periodSeconds: 5
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 5000
+            initialDelaySeconds: 15
+            periodSeconds: 20
           resources: {}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
