--- a/server-auth/kubernetes/resources-template.yaml
+++ b/server-auth/kubernetes/resources-template.yaml
@@ -36,12 +36,12 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: server-secrets
-                  key: AUTH_UR
+                  key: AUTH_URL
             - name: BUCKET_URL
               valueFrom:
                 secretKeyRef:
                   name: server-secrets
-                  key: BUCKET_UR
+                  key: BUCKET_URL
             - name: GAMESERVER_URL
               valueFrom:
                 secretKeyRef:
