--- a/server-auth/kubernetes/resources-template.yaml
+++ b/server-auth/kubernetes/resources-template.yaml
@@ -59,13 +59,13 @@ spec:
                   key: GOOGLE_CLIENT_SECRET
           readinessProbe:
             httpGet:
-              path: /health
+              path: /healthcheck
               port: 5000
             initialDelaySeconds: 10
             periodSeconds: 5
           livenessProbe:
             httpGet:
-              path: /health
+              path: /healthcheck
               port: 5000
             initialDelaySeconds: 15
             periodSeconds: 20
