--- a/server-auth/kubernetes/ingress.yaml
+++ b/server-auth/kubernetes/ingress.yaml
@@ -12,7 +12,7 @@ spec:
   rules:
     - http:
         paths:
-          - path: /auth/google
+          - path: /*
             pathType: ImplementationSpecific
             backend:
               service:
