--- a/server-auth/kubernetes/ingress.yaml
+++ b/server-auth/kubernetes/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "gce"
     ingress.kubernetes.io/affinity: "cookie"
-    ingress.kubernetes.io/session-cookie-name: "affinityAuthCookie"
+    ingress.kubernetes.io/session-cookie-name: "mugenAuthCookie"
     ingress.kubernetes.io/session-cookie-hash: "sha256"
 spec:
   rules:
