--- a/client/kubernetes/resources-template.yaml
+++ b/client/kubernetes/resources-template.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: client
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: client
@@ -45,7 +45,13 @@ spec:
                 secretKeyRef:
                   name: server-secrets
                   key: GAMESERVER_URL
-          resources: {}
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "200Mi"
+            limits:
+              cpu: "200m"
+              memory: "400Mi"
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
