--- a/server-auth/kubernetes/resources-template.yaml
+++ b/server-auth/kubernetes/resources-template.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: server-auth
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: server-auth
@@ -69,7 +69,13 @@ spec:
               port: 5000
             initialDelaySeconds: 15
             periodSeconds: 20
-          resources: {}
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "200Mi"
+            limits:
+              cpu: "200m"
+              memory: "400Mi"
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
