--- a/client/kubernetes/resources-template.yaml
+++ b/client/kubernetes/resources-template.yaml
@@ -45,13 +45,7 @@ spec:
                 secretKeyRef:
                   name: server-secrets
                   key: GAMESERVER_URL
-          resources:
-            requests:
-              cpu: "100m"
-              memory: "200Mi"
-            limits:
-              cpu: "200m"
-              memory: "400Mi"
+          resources: {}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
