--- a/server-auth/kubernetes/resources-template.yaml
+++ b/server-auth/kubernetes/resources-template.yaml
@@ -69,13 +69,7 @@ spec:
               port: 5000
             initialDelaySeconds: 15
             periodSeconds: 20
-          resources:
-            requests:
-              cpu: "100m"
-              memory: "200Mi"
-            limits:
-              cpu: "200m"
-              memory: "400Mi"
+          resources: {}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
